deploy: f68b2f84c3c850ebd8fa6c15939c5e736a00df97

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -719,7 +719,13 @@
                               <a href="MacroTools.QuestSystem.UtilityStructs.FactionListExtensions.html" name="" title="FactionListExtensions">FactionListExtensions</a>
                           </li>
                           <li>
+                              <a href="MacroTools.QuestSystem.UtilityStructs.IHasCompletingUnit.html" name="" title="IHasCompletingUnit">IHasCompletingUnit</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveAcquireArtifact.html" name="" title="ObjectiveAcquireArtifact">ObjectiveAcquireArtifact</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveAnyHeroWithLevelReachRect.html" name="" title="ObjectiveAnyHeroWithLevelReachRect">ObjectiveAnyHeroWithLevelReachRect</a>
                           </li>
                           <li>
                               <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveAnyUnitInRect.html" name="" title="ObjectiveAnyUnitInRect">ObjectiveAnyUnitInRect</a>
@@ -761,7 +767,7 @@
                               <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveFactionDefeated.html" name="" title="ObjectiveFactionDefeated">ObjectiveFactionDefeated</a>
                           </li>
                           <li>
-                              <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveHeroWithLevelReachRect.html" name="" title="ObjectiveHeroWithLevelReachRect">ObjectiveHeroWithLevelReachRect</a>
+                              <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveHeroWithLevelInRect.html" name="" title="ObjectiveHeroWithLevelInRect">ObjectiveHeroWithLevelInRect</a>
                           </li>
                           <li>
                               <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveKillUnit.html" name="" title="ObjectiveKillUnit">ObjectiveKillUnit</a>
@@ -786,6 +792,9 @@
                           </li>
                           <li>
                               <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveLegendReachRect.html" name="" title="ObjectiveLegendReachRect">ObjectiveLegendReachRect</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveNoOtherPlayerGetsArtifact.html" name="" title="ObjectiveNoOtherPlayerGetsArtifact">ObjectiveNoOtherPlayerGetsArtifact</a>
                           </li>
                           <li>
                               <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveResearch.html" name="" title="ObjectiveResearch">ObjectiveResearch</a>
