--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -292,6 +292,9 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.QuestBookOfMedivh.html" name="" title="QuestBookOfMedivh">QuestBookOfMedivh</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.QuestTombOfSargeras.html" name="" title="QuestTombOfSargeras">QuestTombOfSargeras</a>
                           </li>
                           <li>
