deploy: 1059026dc18d273d1ef60385f771b1d619ee6cb3

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -322,7 +322,7 @@
                               <a href="MacroTools.Extensions.RectangleExtensions.html" name="" title="RectangleExtensions">RectangleExtensions</a>
                           </li>
                           <li>
-                              <a href="MacroTools.Extensions.RectangleExtensions.RescueMode.html" name="" title="RectangleExtensions.RescueMode">RectangleExtensions.RescueMode</a>
+                              <a href="MacroTools.Extensions.RescuePreparationMode.html" name="" title="RescuePreparationMode">RescuePreparationMode</a>
                           </li>
                           <li>
                               <a href="MacroTools.Extensions.SoundExtensions.html" name="" title="SoundExtensions">SoundExtensions</a>
