deploy: 373f41e09fb498b3c78c973b649ad77d46edbf4b

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -247,6 +247,9 @@
                               <a href="WarcraftLegacies.Source.Mechanics.Scourge.EventKelthuzadDeath.html" name="" title="EventKelthuzadDeath">EventKelthuzadDeath</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Mechanics.Scourge.HelmOfDominationDropsWhenScourgeLeaves.html" name="" title="HelmOfDominationDropsWhenScourgeLeaves">HelmOfDominationDropsWhenScourgeLeaves</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Mechanics.Scourge.Plagueling.html" name="" title="Plagueling">Plagueling</a>
                           </li>
                           <li>
