--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -475,19 +475,6 @@
                 </li>
                 <li>
                     <span class="expand-stub"></span>
-                    <a href="MacroTools.Gates.html" name="" title="MacroTools.Gates">MacroTools.Gates</a>
-                    
-                    <ul class="nav level2">
-                          <li>
-                              <a href="MacroTools.Gates.Gate.html" name="" title="Gate">Gate</a>
-                          </li>
-                          <li>
-                              <a href="MacroTools.Gates.GateService.html" name="" title="GateService">GateService</a>
-                          </li>
-                    </ul>
-                </li>
-                <li>
-                    <span class="expand-stub"></span>
                     <a href="MacroTools.Hazards.html" name="" title="MacroTools.Hazards">MacroTools.Hazards</a>
                     
                     <ul class="nav level2">
@@ -614,6 +601,9 @@
                           </li>
                           <li>
                               <a href="MacroTools.PassiveAbilities.Execute.html" name="" title="Execute">Execute</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.PassiveAbilities.Gate.html" name="" title="Gate">Gate</a>
                           </li>
                           <li>
                               <a href="MacroTools.PassiveAbilities.HideousAppendages.html" name="" title="HideousAppendages">HideousAppendages</a>
