--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -384,6 +384,9 @@
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Dragonmaw.QuestOrgrimmarPortal.html" name="" title="QuestOrgrimmarPortal">QuestOrgrimmarPortal</a>
                           </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Dragonmaw.QuestStonemaul.html" name="" title="QuestStonemaul">QuestStonemaul</a>
+                          </li>
                     </ul>
                 </li>
                 <li>
@@ -488,13 +491,13 @@
                               <a href="WarcraftLegacies.Source.Quests.Frostwolf.QuestGazlowe.html" name="" title="QuestGazlowe">QuestGazlowe</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Frostwolf.QuestRexxar.html" name="" title="QuestRexxar">QuestRexxar</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Frostwolf.QuestRoyalPlunder.html" name="" title="QuestRoyalPlunder">QuestRoyalPlunder</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Frostwolf.QuestSeaWitch.html" name="" title="QuestSeaWitch">QuestSeaWitch</a>
-                          </li>
-                          <li>
-                              <a href="WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.html" name="" title="QuestStonemaul">QuestStonemaul</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Frostwolf.QuestThunderBluff.html" name="" title="QuestThunderBluff">QuestThunderBluff</a>
