deploy: e0ca3b57605ca29ce7d3985ddda1fcab798e7806

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -506,6 +506,34 @@
                 </li>
                 <li>
                     <span class="expand-stub"></span>
+                    <a href="WarcraftLegacies.Source.Quests.Gilneas.html" name="" title="WarcraftLegacies.Source.Quests.Gilneas">WarcraftLegacies.Source.Quests.Gilneas</a>
+                    
+                    <ul class="nav level2">
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Gilneas.QuestDuskhaven.html" name="" title="QuestDuskhaven">QuestDuskhaven</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Gilneas.QuestGilneasCity.html" name="" title="QuestGilneasCity">QuestGilneasCity</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Gilneas.QuestGoldrinnElvePath.html" name="" title="QuestGoldrinnElvePath">QuestGoldrinnElvePath</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Gilneas.QuestGoldrinnHumanPath.html" name="" title="QuestGoldrinnHumanPath">QuestGoldrinnHumanPath</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Gilneas.QuestKeelHarbor.html" name="" title="QuestKeelHarbor">QuestKeelHarbor</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Gilneas.QuestStormglen.html" name="" title="QuestStormglen">QuestStormglen</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Gilneas.QuestTempestReach.html" name="" title="QuestTempestReach">QuestTempestReach</a>
+                          </li>
+                    </ul>
+                </li>
+                <li>
+                    <span class="expand-stub"></span>
                     <a href="WarcraftLegacies.Source.Quests.Goblin.html" name="" title="WarcraftLegacies.Source.Quests.Goblin">WarcraftLegacies.Source.Quests.Goblin</a>
                     
                     <ul class="nav level2">
@@ -1264,6 +1292,9 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.QuestSetup.FrostwolfQuestSetup.html" name="" title="FrostwolfQuestSetup">FrostwolfQuestSetup</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Setup.QuestSetup.GilneasQuestSetup.html" name="" title="GilneasQuestSetup">GilneasQuestSetup</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.QuestSetup.GoblinQuestSetup.html" name="" title="GoblinQuestSetup">GoblinQuestSetup</a>
