--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1045,6 +1045,9 @@
                               <a href="WarcraftLegacies.Source.Setup.AugmentSetup.html" name="" title="AugmentSetup">AugmentSetup</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Setup.BlockerSetup.html" name="" title="BlockerSetup">BlockerSetup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Setup.Cameras.html" name="" title="Cameras">Cameras</a>
                           </li>
                           <li>
