deploy: 5c1bc3e27868e462f6b7e2fcfb926c096eca8ce7

--- a/api-macroTools/MacroTools.Mechanics.StructurePacking.PackableStructure.html
+++ b/api-macroTools/MacroTools.Mechanics.StructurePacking.PackableStructure.html
@@ -91,17 +91,17 @@
   </h3>
   <span class="small pull-right mobile-hide">
     <span class="divider">|</span>
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=MacroTools_Mechanics_StructurePacking_PackableStructure__buildAbility.md&amp;value=---%0Auid%3A%20MacroTools.Mechanics.StructurePacking.PackableStructure._buildAbility%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=MacroTools_Mechanics_StructurePacking_PackableStructure_BuildAbility.md&amp;value=---%0Auid%3A%20MacroTools.Mechanics.StructurePacking.PackableStructure.BuildAbility%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/MacroTools/Mechanics/StructurePacking.cs/#L19">View Source</a>
   </span>
-  <h4 id="MacroTools_Mechanics_StructurePacking_PackableStructure__buildAbility" data-uid="MacroTools.Mechanics.StructurePacking.PackableStructure._buildAbility">_buildAbility</h4>
+  <h4 id="MacroTools_Mechanics_StructurePacking_PackableStructure_BuildAbility" data-uid="MacroTools.Mechanics.StructurePacking.PackableStructure.BuildAbility">BuildAbility</h4>
   <div class="markdown level1 summary"></div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public int _buildAbility</code></pre>
+    <pre><code class="lang-csharp hljs">public int BuildAbility</code></pre>
   </div>
   <h5 class="fieldValue">Field Value</h5>
   <table class="table table-bordered table-striped table-condensed">
@@ -120,17 +120,17 @@
   </table>
   <span class="small pull-right mobile-hide">
     <span class="divider">|</span>
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=MacroTools_Mechanics_StructurePacking_PackableStructure__packedUnitId.md&amp;value=---%0Auid%3A%20MacroTools.Mechanics.StructurePacking.PackableStructure._packedUnitId%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=MacroTools_Mechanics_StructurePacking_PackableStructure_PackedUnitId.md&amp;value=---%0Auid%3A%20MacroTools.Mechanics.StructurePacking.PackableStructure.PackedUnitId%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/MacroTools/Mechanics/StructurePacking.cs/#L18">View Source</a>
   </span>
-  <h4 id="MacroTools_Mechanics_StructurePacking_PackableStructure__packedUnitId" data-uid="MacroTools.Mechanics.StructurePacking.PackableStructure._packedUnitId">_packedUnitId</h4>
+  <h4 id="MacroTools_Mechanics_StructurePacking_PackableStructure_PackedUnitId" data-uid="MacroTools.Mechanics.StructurePacking.PackableStructure.PackedUnitId">PackedUnitId</h4>
   <div class="markdown level1 summary"></div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public int _packedUnitId</code></pre>
+    <pre><code class="lang-csharp hljs">public int PackedUnitId</code></pre>
   </div>
   <h5 class="fieldValue">Field Value</h5>
   <table class="table table-bordered table-striped table-condensed">
@@ -149,17 +149,17 @@
   </table>
   <span class="small pull-right mobile-hide">
     <span class="divider">|</span>
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=MacroTools_Mechanics_StructurePacking_PackableStructure__structureId.md&amp;value=---%0Auid%3A%20MacroTools.Mechanics.StructurePacking.PackableStructure._structureId%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=MacroTools_Mechanics_StructurePacking_PackableStructure_StructureId.md&amp;value=---%0Auid%3A%20MacroTools.Mechanics.StructurePacking.PackableStructure.StructureId%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/MacroTools/Mechanics/StructurePacking.cs/#L21">View Source</a>
   </span>
-  <h4 id="MacroTools_Mechanics_StructurePacking_PackableStructure__structureId" data-uid="MacroTools.Mechanics.StructurePacking.PackableStructure._structureId">_structureId</h4>
+  <h4 id="MacroTools_Mechanics_StructurePacking_PackableStructure_StructureId" data-uid="MacroTools.Mechanics.StructurePacking.PackableStructure.StructureId">StructureId</h4>
   <div class="markdown level1 summary"></div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public int _structureId</code></pre>
+    <pre><code class="lang-csharp hljs">public int StructureId</code></pre>
   </div>
   <h5 class="fieldValue">Field Value</h5>
   <table class="table table-bordered table-striped table-condensed">
@@ -178,17 +178,17 @@
   </table>
   <span class="small pull-right mobile-hide">
     <span class="divider">|</span>
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=MacroTools_Mechanics_StructurePacking_PackableStructure__structureModel.md&amp;value=---%0Auid%3A%20MacroTools.Mechanics.StructurePacking.PackableStructure._structureModel%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=MacroTools_Mechanics_StructurePacking_PackableStructure_StructureModel.md&amp;value=---%0Auid%3A%20MacroTools.Mechanics.StructurePacking.PackableStructure.StructureModel%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/MacroTools/Mechanics/StructurePacking.cs/#L20">View Source</a>
   </span>
-  <h4 id="MacroTools_Mechanics_StructurePacking_PackableStructure__structureModel" data-uid="MacroTools.Mechanics.StructurePacking.PackableStructure._structureModel">_structureModel</h4>
+  <h4 id="MacroTools_Mechanics_StructurePacking_PackableStructure_StructureModel" data-uid="MacroTools.Mechanics.StructurePacking.PackableStructure.StructureModel">StructureModel</h4>
   <div class="markdown level1 summary"></div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public string _structureModel</code></pre>
+    <pre><code class="lang-csharp hljs">public string StructureModel</code></pre>
   </div>
   <h5 class="fieldValue">Field Value</h5>
   <table class="table table-bordered table-striped table-condensed">
