deploy: 3b056e4fae71f8cd0e0c6d15b29a543b6b9ddaa6

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -379,6 +379,9 @@
                               <a href="WarcraftLegacies.Source.Quests.Dragonmaw.QuestDragonmawPort.html" name="" title="QuestDragonmawPort">QuestDragonmawPort</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Dragonmaw.QuestDunAlgazSiege.html" name="" title="QuestDunAlgazSiege">QuestDunAlgazSiege</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Dragonmaw.QuestGrimBatol.html" name="" title="QuestGrimBatol">QuestGrimBatol</a>
                           </li>
                           <li>
@@ -386,6 +389,9 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Dragonmaw.QuestStonemaul.html" name="" title="QuestStonemaul">QuestStonemaul</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Dragonmaw.QuestWetlandOffensive.html" name="" title="QuestWetlandOffensive">QuestWetlandOffensive</a>
                           </li>
                     </ul>
                 </li>
@@ -573,6 +579,12 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Ironforge.QuestGnomeregan.html" name="" title="QuestGnomeregan">QuestGnomeregan</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Ironforge.QuestGrimBatolOffensive.html" name="" title="QuestGrimBatolOffensive">QuestGrimBatolOffensive</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Ironforge.QuestTheAccursedCoast.html" name="" title="QuestTheAccursedCoast">QuestTheAccursedCoast</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Ironforge.QuestThelsamar.html" name="" title="QuestThelsamar">QuestThelsamar</a>
