deploy: b007ce93b2fbf6ef3b48a8b28bb36af8de83ad1d

--- a/api-macroTools/MacroTools.Frames.Button.html
+++ b/api-macroTools/MacroTools.Frames.Button.html
@@ -307,17 +307,16 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=MacroTools_Frames_Button_OnClick.md&amp;value=---%0Auid%3A%20MacroTools.Frames.Button.OnClick%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/MacroTools/Frames/Button.cs/#L33">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/MacroTools/Frames/Button.cs/#L36">View Source</a>
   </span>
   <a id="MacroTools_Frames_Button_OnClick_" data-uid="MacroTools.Frames.Button.OnClick*"></a>
   <h4 id="MacroTools_Frames_Button_OnClick" data-uid="MacroTools.Frames.Button.OnClick">OnClick</h4>
-  <div class="markdown level1 summary"></div>
+  <div class="markdown level1 summary"><p>Determines what happens when the button is clicked.</p>
+</div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public OnClickAction OnClick
-{
-}</code></pre>
+    <pre><code class="lang-csharp hljs">public OnClickAction OnClick { set; }</code></pre>
   </div>
   <h5 class="propertyValue">Property Value</h5>
   <table class="table table-bordered table-striped table-condensed">
@@ -339,7 +338,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=MacroTools_Frames_Button_Text.md&amp;value=---%0Auid%3A%20MacroTools.Frames.Button.Text%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/MacroTools/Frames/Button.cs/#L43">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/MacroTools/Frames/Button.cs/#L46">View Source</a>
   </span>
   <a id="MacroTools_Frames_Button_Text_" data-uid="MacroTools.Frames.Button.Text*"></a>
   <h4 id="MacroTools_Frames_Button_Text" data-uid="MacroTools.Frames.Button.Text">Text</h4>
