--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1060,6 +1060,9 @@
                               <a href="WarcraftLegacies.Source.Setup.BlockerSetup.html" name="" title="BlockerSetup">BlockerSetup</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Setup.BookSetup.html" name="" title="BookSetup">BookSetup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Setup.Cameras.html" name="" title="Cameras">Cameras</a>
                           </li>
                           <li>
