--- a/api-macroTools/MacroTools.SoundLibrary.html
+++ b/api-macroTools/MacroTools.SoundLibrary.html
@@ -268,6 +268,23 @@
       </tr>
     </tbody>
   </table>
+  <h3 id="methods">Methods
+  </h3>
+  <span class="small pull-right mobile-hide">
+    <span class="divider">|</span>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=MacroTools_SoundLibrary_Setup.md&amp;value=---%0Auid%3A%20MacroTools.SoundLibrary.Setup%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
+  </span>
+  <span class="small pull-right mobile-hide">
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/MacroTools/SoundLibrary.cs/#L19">View Source</a>
+  </span>
+  <a id="MacroTools_SoundLibrary_Setup_" data-uid="MacroTools.SoundLibrary.Setup*"></a>
+  <h4 id="MacroTools_SoundLibrary_Setup" data-uid="MacroTools.SoundLibrary.Setup">Setup()</h4>
+  <div class="markdown level1 summary"></div>
+  <div class="markdown level1 conceptual"></div>
+  <h5 class="decalaration">Declaration</h5>
+  <div class="codewrapper">
+    <pre><code class="lang-csharp hljs">public static void Setup()</code></pre>
+  </div>
 </article>
           </div>
           
