deploy: 1529b5a499b616bfb84934b5d85edd1904cce654

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1367,6 +1367,9 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="WarcraftLegacies.Source.Setup.Spells.DragonmawSpellSetup.html" name="" title="DragonmawSpellSetup">DragonmawSpellSetup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Setup.Spells.DruidsSpellSetup.html" name="" title="DruidsSpellSetup">DruidsSpellSetup</a>
                           </li>
                           <li>
