deploy: e97512ce1cfea92ae6cd3b6a6cd764cf34182090

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -643,6 +643,9 @@
                               <a href="MacroTools.PassiveAbilities.SpellResistanceAura.html" name="" title="SpellResistanceAura">SpellResistanceAura</a>
                           </li>
                           <li>
+                              <a href="MacroTools.PassiveAbilities.TakeExtraDamageOnWater.html" name="" title="TakeExtraDamageOnWater">TakeExtraDamageOnWater</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.PassiveAbilities.WarglaivesOfAzzinoth.html" name="" title="WarglaivesOfAzzinoth">WarglaivesOfAzzinoth</a>
                           </li>
                     </ul>
@@ -654,6 +657,9 @@
                     <ul class="nav level2">
                           <li>
                               <a href="MacroTools.PassiveAbilitySystem.IAppliesEffectOnDamage.html" name="" title="IAppliesEffectOnDamage">IAppliesEffectOnDamage</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.PassiveAbilitySystem.IEffectOnTakesDamage.html" name="" title="IEffectOnTakesDamage">IEffectOnTakesDamage</a>
                           </li>
                           <li>
                               <a href="MacroTools.PassiveAbilitySystem.PassiveAbility.html" name="" title="PassiveAbility">PassiveAbility</a>
