--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1385,6 +1385,9 @@
                               <a href="WarcraftLegacies.Source.Setup.Spells.IllidanSpellSetup.html" name="" title="IllidanSpellSetup">IllidanSpellSetup</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Setup.Spells.IllidariSpellSetup.html" name="" title="IllidariSpellSetup">IllidariSpellSetup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Setup.Spells.KulTirasSpellSetup.html" name="" title="KulTirasSpellSetup">KulTirasSpellSetup</a>
                           </li>
                           <li>
