deploy: 627ea979b31a7682e85decbcbf8277391626d5b2

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -191,6 +191,9 @@
                               <a href="MacroTools.Buffs.IncomeBuff.html" name="" title="IncomeBuff">IncomeBuff</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Buffs.OilHarvesterBuff.html" name="" title="OilHarvesterBuff">OilHarvesterBuff</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Buffs.OilProducerBuff.html" name="" title="OilProducerBuff">OilProducerBuff</a>
                           </li>
                           <li>
@@ -495,6 +498,9 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="MacroTools.Hazards.OilPool.html" name="" title="OilPool">OilPool</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Hazards.RecurrentSpellHazard.html" name="" title="RecurrentSpellHazard">RecurrentSpellHazard</a>
                           </li>
                           <li>
@@ -623,6 +629,9 @@
                           </li>
                           <li>
                               <a href="MacroTools.PassiveAbilities.HideousAppendages.html" name="" title="HideousAppendages">HideousAppendages</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.PassiveAbilities.OilHarvester.html" name="" title="OilHarvester">OilHarvester</a>
                           </li>
                           <li>
                               <a href="MacroTools.PassiveAbilities.PersistentSoul.html" name="" title="PersistentSoul">PersistentSoul</a>
