deploy: 9967526728f0442210fee0ed5a7c8549acdf8725

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1410,6 +1410,9 @@
                               <a href="WarcraftLegacies.Source.Spells.CorruptBuildingSpell.html" name="" title="CorruptBuildingSpell">CorruptBuildingSpell</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Spells.PingOilDeposits.html" name="" title="PingOilDeposits">PingOilDeposits</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Spells.WeaponEmpowerment.html" name="" title="WeaponEmpowerment">WeaponEmpowerment</a>
                           </li>
                     </ul>
