deploy: 9cccb0ecdf28bfa119e3d75da4dcaaeca0149d35

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -24,6 +24,9 @@
                               <a href="MacroTools.GameTime.html" name="" title="GameTime">GameTime</a>
                           </li>
                           <li>
+                              <a href="MacroTools.LeveledAbilityField-1.html" name="" title="LeveledAbilityField&lt;T&gt;">LeveledAbilityField&lt;T&gt;</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.PreplacedUnitSystem.html" name="" title="PreplacedUnitSystem">PreplacedUnitSystem</a>
                           </li>
                           <li>
@@ -641,6 +644,9 @@
                           </li>
                           <li>
                               <a href="MacroTools.PassiveAbilities.RegionRestricted.html" name="" title="RegionRestricted">RegionRestricted</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.PassiveAbilities.RestoreManaFromDamage.html" name="" title="RestoreManaFromDamage">RestoreManaFromDamage</a>
                           </li>
                           <li>
                               <a href="MacroTools.PassiveAbilities.ResurrectionAura.html" name="" title="ResurrectionAura">ResurrectionAura</a>
