deploy: adfcace65f2fc59e0cd0100a887d46a0987c34c4

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -120,24 +120,17 @@
                 </li>
                 <li>
                     <span class="expand-stub"></span>
-                    <a href="MacroTools.BookSystem.Artifacts.html" name="" title="MacroTools.BookSystem.Artifacts">MacroTools.BookSystem.Artifacts</a>
-                    
-                    <ul class="nav level2">
-                          <li>
-                              <a href="MacroTools.BookSystem.Artifacts.ArtifactCard.html" name="" title="ArtifactCard">ArtifactCard</a>
-                          </li>
-                          <li>
-                              <a href="MacroTools.BookSystem.Artifacts.ArtifactPage.html" name="" title="ArtifactPage">ArtifactPage</a>
-                          </li>
-                    </ul>
-                </li>
-                <li>
-                    <span class="expand-stub"></span>
                     <a href="MacroTools.BookSystem.ArtifactSystem.html" name="" title="MacroTools.BookSystem.ArtifactSystem">MacroTools.BookSystem.ArtifactSystem</a>
                     
                     <ul class="nav level2">
                           <li>
                               <a href="MacroTools.BookSystem.ArtifactSystem.ArtifactBook.html" name="" title="ArtifactBook">ArtifactBook</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.BookSystem.ArtifactSystem.ArtifactCard.html" name="" title="ArtifactCard">ArtifactCard</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.BookSystem.ArtifactSystem.ArtifactPage.html" name="" title="ArtifactPage">ArtifactPage</a>
                           </li>
                     </ul>
                 </li>
