--- a/api-source/WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.html
+++ b/api-source/WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.html
@@ -120,18 +120,18 @@
   </table>
   <span class="small pull-right mobile-hide">
     <span class="divider">|</span>
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_LegendNekrosh.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.LegendNekrosh%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_Nekrosh.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.Nekrosh%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendDragonmaw.cs/#L11">View Source</a>
   </span>
-  <a id="WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_LegendNekrosh_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.LegendNekrosh*"></a>
-  <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_LegendNekrosh" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.LegendNekrosh">LegendNekrosh</h4>
+  <a id="WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_Nekrosh_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.Nekrosh*"></a>
+  <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_Nekrosh" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.Nekrosh">Nekrosh</h4>
   <div class="markdown level1 summary"></div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public static Legend LegendNekrosh { get; }</code></pre>
+    <pre><code class="lang-csharp hljs">public static Legend Nekrosh { get; }</code></pre>
   </div>
   <h5 class="propertyValue">Property Value</h5>
   <table class="table table-bordered table-striped table-condensed">
@@ -150,18 +150,18 @@
   </table>
   <span class="small pull-right mobile-hide">
     <span class="divider">|</span>
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_LegendZaela.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.LegendZaela%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_Zaela.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.Zaela%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendDragonmaw.cs/#L10">View Source</a>
   </span>
-  <a id="WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_LegendZaela_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.LegendZaela*"></a>
-  <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_LegendZaela" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.LegendZaela">LegendZaela</h4>
+  <a id="WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_Zaela_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.Zaela*"></a>
+  <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_Zaela" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.Zaela">Zaela</h4>
   <div class="markdown level1 summary"></div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public static Legend LegendZaela { get; }</code></pre>
+    <pre><code class="lang-csharp hljs">public static Legend Zaela { get; }</code></pre>
   </div>
   <h5 class="propertyValue">Property Value</h5>
   <table class="table table-bordered table-striped table-condensed">
