deploy: b2df74b0c9867250eeb270be8a69d31fb1ebdafb

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -149,6 +149,9 @@
                           <li>
                               <a href="WarcraftLegacies.Source.GameLogic.StartingResources.html" name="" title="StartingResources">StartingResources</a>
                           </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.GameLogic.SummonRallyPoints.html" name="" title="SummonRallyPoints">SummonRallyPoints</a>
+                          </li>
                     </ul>
                 </li>
                 <li>
