deploy: 13062448e39aea6e3d8d3240d582ce29092869b3

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -33,11 +33,11 @@
                 </li>
                 <li>
                     <span class="expand-stub"></span>
-                    <a href="WarcraftLegacies.Source.Artifacts.html" name="" title="WarcraftLegacies.Source.Artifacts">WarcraftLegacies.Source.Artifacts</a>
+                    <a href="WarcraftLegacies.Source.ArtifactBehaviour.html" name="" title="WarcraftLegacies.Source.ArtifactBehaviour">WarcraftLegacies.Source.ArtifactBehaviour</a>
                     
                     <ul class="nav level2">
                           <li>
-                              <a href="WarcraftLegacies.Source.Artifacts.EyeOfSargerasCooldowns.html" name="" title="EyeOfSargerasCooldowns">EyeOfSargerasCooldowns</a>
+                              <a href="WarcraftLegacies.Source.ArtifactBehaviour.EyeOfSargerasCooldowns.html" name="" title="EyeOfSargerasCooldowns">EyeOfSargerasCooldowns</a>
                           </li>
                     </ul>
                 </li>
