deploy: 254d017f6711cba21fe0d7dc43e371fec68c0580

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -696,6 +696,9 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.html" name="" title="QuestAetheneumTomb">QuestAetheneumTomb</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Naga.QuestBlackTemple.html" name="" title="QuestBlackTemple">QuestBlackTemple</a>
                           </li>
                           <li>
